Fix scrollbars.

--- a/style.scss
+++ b/style.scss
@@ -66,13 +66,12 @@ $desktop: "only screen and (min-width: 1025px)";
 
 body, html {
   height: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 body {
   background: linear-gradient($skyDark, $skyLight);
   z-index: -99;
-  // TODO overflow: hidden;
 }
 
 
@@ -101,7 +100,7 @@ button {
   position: relative;
   width: 100%;
   height: 100%;
-  overflow-y: scroll;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
